Fix z-index on header.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -86,7 +86,7 @@
         right: 0;
         width: 100%;
         min-height: 3em;
-        z-index: 1;
+        z-index: 3;
     }
 
     header h1 {
