--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@
     right: 0;
     width: 100%;
     min-height: 3em;
-    z-index: 1; }
+    z-index: 3; }
 
   header h1 {
     font-size: 30px;
